--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -1,5 +1,5 @@
 <div>
-    enter password
+    <!--enter password-->
     <input type="password" class="input_text" id="confirm" placeholder="password" ng-model="supc.ourPassword">
     <input type="password" class="input_text" placeholder="confirm password" ng-model = "supc.confirmPassword">
     <button type="button" class="btn btn-default btn-block current-location" id="submit" ng-click="supc.validate_password()">submit</button>
