--- a/pages/user_fyi.html
+++ b/pages/user_fyi.html
@@ -12,7 +12,7 @@
             show sample matches*
         </button>
     </a>
-    <p class="sample_paragraph">
+    <p class="input-fyi note-for-sample-match">
         *note that these won't be your best matches, just some samples.
     </p>
 </div>
