--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -1,6 +1,6 @@
 
-<div class="outdoors-about groupings">
-    when traveling we like
+<div>
+    <h1>when traveling we like</h1><p class="input-fyi">(select at least one interest)</p>
     <div class="interest-buttons">
         <div class="at-home groupings">
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
@@ -22,18 +22,18 @@
                 abroad</button>
         </div>
     </div>
-</div>
 
-<p>Please select at least one interest.</p>
-<div class="previous-next pull-right">
-    <a href="#/interests_outdoors">
-        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <div class="previous-next pull-right">
+        <a href="#/interests_outdoors">
+            <button type="button" class="btn btn-default chevronButton" aria-label="Left Align" ng-click="itc.setTravelInterests()">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            </button>
+        </a>
+        <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
+                ng-disabled="itc.travelInterestCount()==0;" ng-click="itc.setUrl()">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         </button>
-    </a>
-    <button type="button" class="btn btn-default chevronButton" aria-label="Left Align"
-            ng-disabled="itc.travelInterestCount()==0;" ng-click="itc.setUrl()">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    </button>
+
+    </div>
 
 </div>
