--- a/pages/sample_match.html
+++ b/pages/sample_match.html
@@ -1,10 +1,10 @@
 <div class="match_content">
-    <a href="#/signup_email">
-        <button type="button" class="btn btn-default btn-block" aria-label="Left Align">
-            sign us up
-        </button>
-    </a>
-    <br>
+    <!--<a href="#/signup_email">-->
+        <!--<button type="button" class="btn btn-default btn-block" aria-label="Left Align">-->
+            <!--sign us up-->
+        <!--</button>-->
+    <!--</a>-->
+    <!--<br>-->
     <p>{{smc.results}}</p>
     <div ng-repeat="match in smc.sampleMatches">
         <p>Match {{$index+1}} of {{smc.sampleMatches.length}}</p>
