--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -1,10 +1,6 @@
 <div class="signup-photo-page">
-
-        <!--<input type="file" name="pic" accept="image/*">-->
-        <!--<img id="myImg" src="#" alt="your image" />-->
-        <!--<input type="submit">-->
     <div>
-        <p>Please upload a photo.</p>
+        <p>upload a photo</p>
         <div id="picture-dropzone-div" class="dropzone">
         </div>
         <br>
