cleaned up terms and conditions page

--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -10,6 +10,6 @@
         <br>
     </div>
     <button type="button" class="btn btn-default btn-block welcome_button" ng-click="sup.setUrl();">
-        I'm finished...next
+        submit
     </button>
 </div>
