--- a/pages/terms.html
+++ b/pages/terms.html
@@ -1,13 +1,10 @@
 <div class="terms-and-conditions">
     <h1>Terms and Conditions</h1>
-    <p>Please read  and accept the Terms and Conditions to continue.</p>
-
+    <p class="input-fyi">Please read and accept to continue.</p>
     <div class="textarea">
-        <h2>Terms and conditions:</h2>
-
-        <h3>Membership</h3>
-
-          <li>The purpose of DoubleDateOC is matching up couples with other couples in their area for shared
+        <!--<h2>Terms and conditions:</h2>-->
+        <h3><strong>Membership</strong></h3>
+        <li>The purpose of DoubleDateOC is matching up couples with other couples in their area for shared
               activities.</li>
         <li> You must be age 18 or above. </li>
         <li>You agree as a couple, jointly and severally, to represent yourselves honestly on DoubleDateOC.</li>
@@ -17,15 +14,14 @@
        <li> DoubleDateOC agrees not to send out any e-mail address without the consent of both parties.</li>
         <li>You recognize that DoubleDateOC has the right to monitor and moderate your use of the system, including denying further access to the system.</li>
         </ul>
-
-        <h3>Terminating Membership</h3>
+        <h3><strong>Terminating Membership</strong></h3>
         <p>
         Both members of the couple must consent to use DoubleDateOC.  A single member of the couple may terminate the relationship with DoubleDateOC.  Emails will be sent to both members of the couple should this occur.  You may terminate your account at any time (moderator@doubledateoc.com).
         If you have not accessed (logged in) the DoubleDateOC website in more than 12 months, DoubleDateOC may send
         you an email to see if you’re still participating and may terminate the relationship if no satisfactory response has been made within a reasonable timeframe.
         </p>
 
-        <h3>Expected Website Behavior</h3>
+        <h3><strong>Expected Website Behavior</strong></h3>
         <p>
         You agree to not harass, stalk, embarrass, or solicit business from other DoubleDateOC members.
         You agree to notify DoubleDateOC of any other member that you believe is in violation of these rules (moderator@doubledateoc.com).
@@ -37,25 +33,27 @@
         any content that does not support the purpose of DoubleDateOC.
         </p>
 
-        <h3>Liability</h3>
+        <h3><strong>Liability</strong></h3>
         <p>
         DoubleDateOC is only a mechanism for exchanging email addresses of members. You agree to not hold DoubleDateOC liable for the result of any interactions that occur due to exchanging these e-mails, or from the interactions and activities that take place based on this exchange of emails.
         DoubleDateOC will not be held liable if DoubleDateOC somehow deletes or corrupts your profile information.
         </p>
 
-        <h3>Ownership of Content</h3>
+        <h3><strong>Ownership of Content</strong></h3>
         <p>You agree not to duplicate, modify, copy, rent, lease, loan, adapt, reproduce, resell or create derivative
              works based on any component of the service without express permission from DoubleDateOC.
         </p>
 
-        <h3>Contacting DoubleDateOC</h3>
+        <h3><strong>Contacting DoubleDateOC</strong></h3>
         <p>
         Any suggestions, comments, issues or questions may be directed to (moderator@doubledateoc.com).
         If you suspect  a security breach into your account, you must immediately contact DoubleDateOC of any unauthorized use of your account.
         </p>
     </div>
-    <input type="checkbox"  ng-click="tc.acceptedTerms=!tc.acceptedTerms; tc.$log.log(tc.acceptedTerms) " >I accept the terms and conditions
-    <button type="button" class="btn btn-default initialSubmit" ng-disabled="!tc.acceptedTerms"
+    <input type="checkbox" ng-click="tc.acceptedTerms=!tc.acceptedTerms; tc.$log.log(tc.acceptedTerms)">
+    <span class="input-fyi"> I accept the terms and conditions</span>
+
+    <button type="button" class="btn btn-default btn-block welcome_button initialSubmit" ng-disabled="!tc.acceptedTerms"
             ng-click="tc.termsButtonClicked()">Join!</button>
 
 </div>
