--- a/pages/user_summary.html
+++ b/pages/user_summary.html
@@ -1,6 +1,6 @@
 <div class="user-summary-page">
     <p>Here is your User Name: <span>"{{ usc.username }}"</span></p>
-    <p>Please write it down for your records.</p>
+    <p class="input-fyi">Please write it down for your records.</p>
     <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Show Us Matches"
             ng-click="usc.summaryButtonClicked()">Show Us Matches</button>
     <div class="alert alert-danger alert-dismissible fade in invalidEmail" ng-show='usc.addError'>
