--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -4,20 +4,20 @@
     <div class="interest-buttons">
         <div class="at-home groupings">
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.camping=!itc.camping; itc.$log.log(itc.camping);itc.travelInterestButtonClicked();"
+                    ng-click="itc.camping=!itc.camping; itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.camping}">camping
             </button>
 
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.domesticTravel=!itc.domesticTravel; itc.$log.log(itc.domesticTravel); itc.travelInterestButtonClicked();"
+                    ng-click="itc.domesticTravel=!itc.domesticTravel; itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.domesticTravel}">domestic
                 travel</button>
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.rving=!itc.rving; itc.$log.log(itc.rving); itc.travelInterestButtonClicked();"
+                    ng-click="itc.rving=!itc.rving; itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.rving}">RV
                 -ing</button>
             <button type="button" class="btn btn-default interest-btn-travel" aria-label="Left Align"
-                    ng-click="itc.travelAbroad=!itc.travelAbroad; itc.$log.log(itc.travelAbroad); itc.travelInterestButtonClicked();"
+                    ng-click="itc.travelAbroad=!itc.travelAbroad; itc.travelInterestButtonClicked();"
                     ng-class="{buttonHighlighted:itc.travelAbroad}">traveling
                 abroad</button>
         </div>
