--- a/pages/signup_name.html
+++ b/pages/signup_name.html
@@ -4,7 +4,7 @@
     <input type="text" placeholder="i.e. 'Donnie and Marie'" class="input_text" ng-model="sunc.name" />
     <p class="alert alert-danger alert-dismissible fade in invalidEmail" ng-show="sunc.addResults">first names</p>
     <button type="button" class="btn btn-default btn-block submitSignup" aria-label="Left Align"
-            ng-click="sunc.nameButtonClicked(); $log.log('This is the name: ' , sunc.name)">submit
+            ng-click="sunc.nameButtonClicked();">submit
     </button>
 
 </div>
