--- a/pages/terms.html
+++ b/pages/terms.html
@@ -50,7 +50,7 @@
         If you suspect  a security breach into your account, you must immediately contact DoubleDateOC of any unauthorized use of your account.
         </p>
     </div>
-    <input type="checkbox" ng-click="tc.acceptedTerms=!tc.acceptedTerms; tc.$log.log(tc.acceptedTerms)">
+    <input type="checkbox" ng-click="tc.acceptedTerms=!tc.acceptedTerms">
     <span class="input-fyi"> I accept the terms and conditions</span>
 
     <button type="button" class="btn btn-default btn-block welcome_button initialSubmit" ng-disabled="!tc.acceptedTerms"
