--- a/proto_edit_profile_sean.html
+++ b/proto_edit_profile_sean.html
@@ -23,7 +23,7 @@
             vertical-align: middle;
             font-size: 3em;
             /*
-            padding:1px 10px 50px 10px; /*50px for footer placeholder, please change */
+            padding:1px 10px 50px 10px; /*50px for footer placeholder, please change
             */
             margin:0;
             padding: 10px;
@@ -104,7 +104,7 @@
         }
     </script>
 </head>
-<body">
+<body>
 <div class="edit_profile_body">
     <h1>Profile Editor</h1>
     <img class="photo" src="test">
@@ -113,44 +113,44 @@
         <div class="profile-option">
             <input type="text" placeholder="Name 1">
             <input type="text" placeholder="Name 2">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
-        <div class="profile-list list-group-item">Ages</div>
+        <div class="profile-list list-group-item" ng-click="faq.question1=!faq.question1">Ages</div>
         <div class="profile-option">
             <input type="text" placeholder="Age 1">
             <input type="text" placeholder="Age 2">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-list list-group-item">Paragraph</div>
         <div class="profile-option">
             <textarea placeholder="enter text here"></textarea>
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-list list-group-item">Zip Code</div>
         <div class="profile-option">
             <input type="text" placeholder="Zip Code">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-list list-group-item">Search distance</div>
         <div class="profile-option">
             <input type="text" placeholder="Distance">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-list list-group-item">Age search filter</div>
         <div class="profile-option">
             <input type="text" placeholder="Age min">
             <input type="text" placeholder="Age max">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-list list-group-item">Interests</div>
         <div class="profile-option">
             <input type="checkbox" id="cbox1" value="first_checkbox"><label for="cbox1">Interest 1</label>
             <input type="checkbox" id="cbox2" value="second_checkbox"><label for="cbox2">Interest 2</label>
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
         <div class="profile-option">
             <input type="text" placeholder="Photo URL">
-            <button>Save</button>
+            <button type="button">Save</button>
         </div>
     </div>
     </body>
