--- a/pages/interests_home.html
+++ b/pages/interests_home.html
@@ -4,27 +4,27 @@
     <div class="interest-checkboxes">
         <div class="at-home groupings">
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.bookClub=!ihc.bookClub; ihc.$log.log(ihc.bookClub);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.bookClub=!ihc.bookClub;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.bookClub}">book
                 club</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.conversation=!ihc.conversation; ihc.$log.log(ihc.conversation);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.conversation=!ihc.conversation;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.conversation}">conversation (e.g. around the fire
                 pit)</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.cooking=!ihc.cooking; ihc.$log.log(ihc.cooking);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.cooking=!ihc.cooking; ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.cooking}">cooking</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.crafts=!ihc.crafts; ihc.$log.log(ihc.crafts);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.crafts=!ihc.crafts;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.crafts}">crafts</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.movieNight=!ihc.movieNight; ihc.$log.log(ihc.movieNight);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.movieNight=!ihc.movieNight;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.movieNight}">movie night</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.boardGames=!ihc.boardGames; ihc.$log.log(ihc.boardGames);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.boardGames=!ihc.boardGames;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.boardGames}">playing board games</button>
             <button type="button" class="btn btn-default interest-btn-home" aria-label="Left Align"
-                    ng-click="ihc.cardGames=!ihc.cardGames;ihc.$log.log(ihc.cardGames);ihc.atHomeInterestButtonClicked();"
+                    ng-click="ihc.cardGames=!ihc.cardGames;ihc.atHomeInterestButtonClicked();"
                     ng-class="{selectedButton: ihc.cardGames}">playing card games</button>
         </div>
     </div>
