added contactus for faq and changed font size for modal

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Double Date OC</title>
     <link href="https://fonts.googleapis.com/css?family=Cabin+Condensed|Francois+One|News+Cycle|Open+Sans+Condensed:300|PT+Sans+Narrow|Dosis|NTR|Quicksand" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -141,6 +141,14 @@
                             <div class="answer" ng-show="faq.question14">
                                 <p>DoubleDateOC is free to its users, and makes money from its advertisers. We try to display advertisers that are based on your interests. We encourage the advertisers to make special deals available to the DoubleDateOC clientele, and we encourage you to patronize those businesses.</p>
                             </div>
+                            <div class="question list-group-item" ng-click="faq.question15=!faq.question15">
+                                Why do I do if I'm having technical problems?
+                            </div>
+                            <div class="answer" ng-show="faq.question15">
+                                <p>Email us at doubledateoc.moderator@gmail.com.</p>
+                            </div>
+
+
                             <!--
                             <div class="question list-group-item">
                             </div>
